# NetServer

./: .gitignore  CMakeLists.txt
benchmark/: Log_bench.hpp  Makefile  PERFORMANCE_REPORT.md  RESUME_ENTRY.md  bench_client.py  bench_full.sh  bench_server.cpp  bench_server_opt.cpp  run_all.sh  run_batch1.sh  run_batch2.sh  run_bench.sh  run_final.sh  run_staged.sh
benchmark/lib/: common.sh
benchmark/phases/: 01_throughput.sh  02_min_payload.sh  03_payload.sh  04_protocol.sh  05_force.sh  06_stability.sh  07_latency.sh  08_extreme.sh
benchmark/results/: PERFORMANCE_REPORT.md  final_bench_20260614_134935.md  final_bench_20260614_134935.txt
examples/echo/: CMakeLists.txt  echo_client.cpp  echo_server.cpp
examples/http_server/: CMakeLists.txt  Util.hpp  httpContext.hpp  httpRequest.hpp  httpServer.hpp  server.cpp
include/Aether/: Aether.hpp  Buffer.hpp  Connection.hpp  FrameDecoder.hpp  InetAddr.hpp  Log.hpp  Reactor.hpp  ServerBase.hpp  TcpServer.hpp  Types.hpp
include/NetWork/: Buffer.hpp  Connection.hpp  EventLoop.hpp  InetAddr.hpp  Log.hpp  LoopThread.hpp  NetWork.hpp  TcpClient.hpp  TcpServer.hpp  Types.hpp
src/client/: Connector.cc  Connector.h  TcpClient.cc  TcpClient.h
src/common/: Buffer.hpp  Channel.cc  Channel.h  Connection.h  Epoller.hpp  EventLoop.cc  EventLoop.h  FrameDecoder.hpp  InetAddr.hpp  Logger.hpp  LoopThread.cc  LoopThread.h  LoopThreadPool.cc  LoopThreadPool.h  Reactor.cc  Reactor.h  SignalHandler.cc  SignalHandler.h  Socket.hpp  TcpConnection.cc  TcpConnection.h  TcpSocket.hpp  ThreadPool.cc  ThreadPool.h  TimeWheel.cc  TimeWheel.h  Timer.hpp  UdpSocket.hpp  WeakCallback.hpp  noncopyable.hpp
src/common/base/: Buffer.hpp  Epoller.hpp  InetAddr.hpp  Logger.hpp  Socket.hpp  TcpSocket.hpp  Timer.hpp  UdpSocket.hpp  WeakCallback.hpp  noncopyable.hpp
src/protocol/: RawProtocolContext.hpp
src/protocol/HTTP/: Util.hpp  httpContext.hpp  httpRequest.hpp  httpResponse.hpp  httpServer.hpp  threadPool.hpp
src/server/: Acceptor.cc  Acceptor.h  ServerBase.h  TcpServer.cc  TcpServer.h
tests/1.test_single_loop_v1/: Makefile  client  client.cpp  server.cpp
tests/2.test_single_loop_v2/: Makefile  client  client.cpp  server.cpp
tests/3.test_single_loop_v3/: Makefile  client.cpp  server.cpp
tests/4.test_multi_loop_v1/: Makefile  client  client.cpp  server.cpp
tests/5.test_httpserver/: Makefile  client1.cpp  client2.cpp  client3.cpp  client4.cpp  client5.cpp  client6.cpp  server.cpp
tests/5.test_httpserver/wwwroot/: index.html
tests/5.test_multi_client_v1/: multi_client.cpp
